--- a/ToDo-App/src/app/body/body.scss
+++ b/ToDo-App/src/app/body/body.scss
@@ -1,13 +1,23 @@
+body {
+    margin: 0;
+    padding: 0;
+    left: 0;
+    top: 0;
+}
+
 .body {
     display: flex;
     justify-content: center;
+    width: 100%;
+    height: 100vh;
 }
 
 //61.8% + 38.2%
 
 .todo-list {
     display: grid;
-    grid-template-columns: 61.8%;
+    //grid-template-columns: 61.8%;
     grid-auto-flow: row;
     grid-row-gap: 10px;
+    width: 61.8%;
 }
