--- a/ToDo-App/src/app/task/task.scss
+++ b/ToDo-App/src/app/task/task.scss
@@ -18,3 +18,14 @@
     margin: 0 8px 0 0;
     padding: 0;
 }
+
+.remove {
+    margin: 0;
+    padding: 0;
+}
+
+.buttons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
