--- a/ToDo-App/src/app/header/header.html
+++ b/ToDo-App/src/app/header/header.html
@@ -1,1 +1,7 @@
-<p>header works!</p>
+<div class="header-container">
+    <ul class="nav-list">
+        <li class="menu-item">Upload</li>
+        <li class="menu-item">Download</li>
+        <li class="menu-item">Clear all</li>
+    </ul>
+</div>
