--- a/ToDo-App/src/app/body/body.scss
+++ b/ToDo-App/src/app/body/body.scss
@@ -7,9 +7,11 @@ body {
 
 .body {
     display: flex;
-    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 100vh;
+    margin: 10px 0 0 0;
+    flex-direction: column;
 }
 
 //61.8% + 38.2%
@@ -20,4 +22,10 @@ body {
     grid-auto-flow: row;
     grid-row-gap: 10px;
     width: 61.8%;
+}
+
+.form {
+    position: relative;
+    margin: 0 0 10px 0;
+    //bottom: 0;
 }
