--- a/ToDo-App/src/app/header/header.html
+++ b/ToDo-App/src/app/header/header.html
@@ -1,7 +1,8 @@
 <div class="header-container">
     <ul class="nav-list">
-        <li class="menu-item">Upload</li>
-        <li class="menu-item">Download</li>
-        <li class="menu-item">Clear all</li>
+        <li (click)="upload()" class="menu-item">Upload</li>
+        <li (click)="download()" class="menu-item">Download</li>
+        <li (click)="clearAll()" class="menu-item">Clear all</li>
+        <li (click)="menu()" class="menu-item right">Menü</li>
     </ul>
 </div>
