--- a/ToDo-App/src/app/header/header.scss
+++ b/ToDo-App/src/app/header/header.scss
@@ -1,19 +1,27 @@
 .header-container {
     background-color: orangered;
     width: 100%;
-    height: 10%;
+    height: auto;
+    padding: 10px 0 10px 0;
     display: flex;
     align-items: center;
+    font-weight: 600;
 }
 
 .nav-list {
     list-style: none;
     display: flex;
     gap: 20px;
-    margin: 0;
+    margin: 0 0 0 10px;
     padding: 0;
 }
 
 .menu-item {
     text-decoration: none;
+    cursor: pointer;
+}
+
+.right {
+    position: absolute;
+    right: 10px;
 }
