--- a/ToDo-App/src/app/task/task.scss
+++ b/ToDo-App/src/app/task/task.scss
@@ -1,12 +1,13 @@
 .task-body {
     width: 100%;
     overflow: scroll;
-    background-color: orangered;
+    background-color: #ff4117da;
     border-radius: 15px;
-    border: 2px solid black;
+    border: 1px solid black;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 4px 0 4px 0;
 }
 
 .task-name {
@@ -28,4 +29,5 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 0 8px 0 0;
 }
