--- a/ToDo-App/src/app/task/task.html
+++ b/ToDo-App/src/app/task/task.html
@@ -1,4 +1,4 @@
 <div class="task-body">
     <h3 class="task-name">{{taskName}}</h3>
-    <div class="buttons"><input type="checkbox" name="taskCompletion" class="checkbox"><button (click)="remove()" class="remove">remove</button></div>
+    <div class="buttons"><input type="checkbox" [(ngModel)]="isChecked" (click)="checkbox()" class="checkbox"><button (click)="remove()" class="remove">remove</button></div>
 </div>
