Implementation of @angular/material and icons (save#7)

--- a/ToDo-App/src/app/task/task.html
+++ b/ToDo-App/src/app/task/task.html
@@ -4,6 +4,6 @@
         <input type="checkbox" 
         class="checkbox" [checked]="isActive"
         (change)="checkbox()">
-        <button (click)="remove()" class="remove">remove</button>
+        <button (click)="remove()" class="remove"><mat-icon>close</mat-icon></button>
     </div>
 </div>
