--- a/ToDo-App/src/app/task/task.scss
+++ b/ToDo-App/src/app/task/task.scss
@@ -23,6 +23,12 @@
 .remove {
     margin: 0;
     padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: transparent;
+    border: none;
+    color: black;
 }
 
 .buttons {
