--- a/ToDo-App/src/app/task/task.scss
+++ b/ToDo-App/src/app/task/task.scss
@@ -1,9 +1,9 @@
 .task-body {
     width: 100%;
     overflow: scroll;
-    background-color: #ff4117da;
+    background-color: var(--quartinary);
     border-radius: 15px;
-    border: 1px solid black;
+    border: 1px solid var(--secondary); 
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -13,11 +13,18 @@
 .task-name {
     padding: 0;
     margin: 0 0 0 8px;
+    color: var(--tertiary);
 }
 
 .checkbox {
     margin: 0 8px 0 0;
     padding: 0;
+}
+
+:host ::ng-deep .mat-mdc-checkbox .mdc-checkbox__background {
+    border-color: var(--secondary) !important;
+    border-width: 2px !important;
+    border-radius: 5px !important;
 }
 
 .remove {
@@ -28,7 +35,13 @@
     align-items: center;
     background: transparent;
     border: none;
-    color: black;
+    //color: black;
+    color: var(--secondary);
+}
+
+.remove:hover {
+    color: red;
+    box-shadow: 2px;
 }
 
 .buttons {
