--- a/ToDo-App/src/styles.scss
+++ b/ToDo-App/src/styles.scss
@@ -41,3 +41,10 @@ body {
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+:root {
+  --primary: #8BB9E7;
+  --secondary: #3399FF;
+  --tertiary: #37474F;
+  --quartinary: #FAFAFA;
+}
