--- a/ToDo-App/src/app/header/header.html
+++ b/ToDo-App/src/app/header/header.html
@@ -1,8 +1,16 @@
-<div class="header-container">
+<!--<div class="header-container">
     <ul class="nav-list">
         <li (click)="upload()" class="menu-item">Upload</li>
         <li (click)="download()" class="menu-item">Download</li>
         <li (click)="clearAll()" class="menu-item">Clear all</li>
         <li (click)="menu()" class="menu-item right">Menü</li>
     </ul>
-</div>
+</div>-->
+
+<mat-toolbar color="primary">
+    <button matIconButton (click)="menu()"><mat-icon>menu</mat-icon></button>
+    <span>ToDo-App</span>
+    <span class="spacer"></span>
+    <button matIconButton (click)="download()"><mat-icon>download</mat-icon></button>
+    <button matIconButton (click)="clearAll()"><mat-icon>delete</mat-icon></button>
+</mat-toolbar>
