--- a/ToDo-App/src/app/body/body.scss
+++ b/ToDo-App/src/app/body/body.scss
@@ -34,5 +34,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     //bottom: 0;
 }
