--- a/ToDo-App/src/app/task/task.html
+++ b/ToDo-App/src/app/task/task.html
@@ -1,10 +1,12 @@
-<div class="task-body">
-    <h3 class="task-name">{{taskName}}</h3>
-    <div class="buttons">
-        <!-- <input type="checkbox" 
-        class="checkbox" [checked]="isActive"
-        (change)="checkbox()"> -->
-        <mat-checkbox class="checkbox" [checked]="isActive" (change)="checkbox()"></mat-checkbox>
-        <button (click)="remove()" class="remove"><mat-icon>close</mat-icon></button>
-    </div>
-</div>
+<mat-card>
+    <mat-card-header>
+        <mat-card-title>{{taskName}}</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos dolore reprehenderit numquam totam sit quibusdam pariatur quia ad consequatur. Necessitatibus pariatur voluptatibus quo harum labore sequi eum obcaecati nihil fugit.
+    </mat-card-content>
+    <mat-card-actions>
+        <mat-checkbox [checked]="isActive" (change)="checkbox()"></mat-checkbox>
+        <button (click)="remove()"><mat-icon>close</mat-icon></button>
+    </mat-card-actions>
+</mat-card>
