--- a/ToDo-App/src/app/body/body.html
+++ b/ToDo-App/src/app/body/body.html
@@ -1,19 +1,26 @@
 <div class="body">
     <div class="form">
-        <!-- <input type="text" placeholder="Enter name..." [(ngModel)]="name"> -->
-        <mat-form-field class="example-full-width">
-            <mat-label>Taskname</mat-label>
-            <input matInput [(ngModel)]="name" #message placeholder="Friday 13/05/25">
-            <!--<mat-hint align="start"><strong>Don't disclose personal info</strong></mat-hint>
-            <mat-hint align="end">{{message.value.length}} / 256</mat-hint>-->
-        </mat-form-field>
-        <mat-form-field>
-            <mat-label>New task</mat-label>
-            <textarea matInput [(ngModel)]="task" placeholder="Take out the trash..."></textarea>
-        </mat-form-field>
-        <button matButton="elevated" class="add-btn" (click)="add()">Add</button>
+        <mat-accordion>
+            <mat-expansion-panel hideToggle>
+                <mat-expansion-panel-header>
+                    <mat-panel-title>Add a new task.</mat-panel-title>
+                    <mat-icon class="space-correction" (click)="triggerSpin()" [class.spin-once]="spin" (animationed)="spin = false" refresh>add</mat-icon>
+                </mat-expansion-panel-header>
+                <div class="expanded-elements">
+                    <mat-form-field>
+                        <mat-label>Taskname</mat-label>
+                        <input matInput [(ngModel)]="name" #message placeholder="Friday 13/05/25">
+                    </mat-form-field>
+                    <mat-form-field>
+                        <mat-label>New task</mat-label>
+                        <textarea matInput [(ngModel)]="task" placeholder="This is a new task!"></textarea>
+                    </mat-form-field>
+                    <button matButton="elevated" class="add-btn" (click)="add()">Add</button>
+                </div>
+            </mat-expansion-panel>
+        </mat-accordion>
     </div>
     <div class="todo-list">
-        <app-task *ngFor="let entry of taskArray" [taskName]="entry[1].name" [uuid]="entry[0]" [isActive]="entry[1].status"></app-task>
+        <app-task *ngFor="let entry of taskArray" [taskName]="entry[1].name" [uuid]="entry[0]" [isActive]="entry[1].status" [taskContent]="entry[1].content"></app-task>
     </div>
 </div>
