--- a/ToDo-App/src/app/task/task.html
+++ b/ToDo-App/src/app/task/task.html
@@ -2,11 +2,9 @@
     <mat-card-header>
         <mat-card-title>{{taskName}}</mat-card-title>
     </mat-card-header>
-    <mat-card-content>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos dolore reprehenderit numquam totam sit quibusdam pariatur quia ad consequatur. Necessitatibus pariatur voluptatibus quo harum labore sequi eum obcaecati nihil fugit.
-    </mat-card-content>
+    <mat-card-content>{{taskContent}}</mat-card-content>
     <mat-card-actions>
         <mat-checkbox [checked]="isActive" (change)="checkbox()"></mat-checkbox>
-        <button (click)="remove()"><mat-icon>close</mat-icon></button>
+        <button matButton="elevated" (click)="remove()"><mat-icon>close</mat-icon></button>
     </mat-card-actions>
 </mat-card>
