--- a/ToDo-App/src/app/header/header.html
+++ b/ToDo-App/src/app/header/header.html
@@ -1,7 +1,8 @@
 <mat-toolbar color="primary">
-    <button matIconButton (click)="menu()"><mat-icon>menu</mat-icon></button>
+    <button matIconButton (click)="menu()"><mat-icon>check_circle_outline</mat-icon></button>
     <span>ToDo-App</span>
     <span class="spacer"></span>
+    <button matIconButton (click)="link()"><mat-icon>link</mat-icon></button>
     <button matIconButton (click)="download()"><mat-icon>download</mat-icon></button>
     <button matIconButton (click)="clearAll()"><mat-icon>delete</mat-icon></button>
 </mat-toolbar>
