--- a/ToDo-App/src/app/task/task.html
+++ b/ToDo-App/src/app/task/task.html
@@ -1,6 +1,6 @@
 <mat-card>
     <mat-card-header>
-        <mat-card-title>{{taskName}}</mat-card-title>
+        <mat-card-title class="card-title">{{taskName}}</mat-card-title>
     </mat-card-header>
     <mat-card-content>{{taskContent}}</mat-card-content>
     <mat-card-actions>
