--- a/ToDo-App/src/app/task/task.scss
+++ b/ToDo-App/src/app/task/task.scss
@@ -2,3 +2,16 @@ mat-card-actions {
     margin-left: auto;
     margin-right: 8px;
 }
+
+.card-title {
+    font-size: 20px;
+    font-weight: 500a;
+}
+
+mat-card-title {
+    border-bottom: 1px solid var(--mat-sys-outline);
+}
+
+mat-card-content {
+    margin-top: 3px;
+}
