--- a/ToDo-App/src/app/header/header.scss
+++ b/ToDo-App/src/app/header/header.scss
@@ -1,3 +1,12 @@
 .spacer {
     flex: 1 1 auto;
 }
+
+mat-radio-group {
+    display: flex;
+    flex-direction: column;
+}
+
+mat-radio-button {
+    margin-right: 5px;
+}
