--- a/ToDo-App/src/styles.scss
+++ b/ToDo-App/src/styles.scss
@@ -1,4 +1,3 @@
-
 // Include theming for Angular Material with `mat.theme()`.
 // This Sass mixin will define CSS variables that are used for styling Angular Material
 // components according to the Material 3 design spec.
@@ -6,13 +5,48 @@
 // custom components at https://material.angular.dev/guide/theming
 @use '@angular/material' as mat;
 
-html {
+.azure-blue-theme {
   @include mat.theme((
     color: (
       primary: mat.$azure-palette,
       tertiary: mat.$blue-palette,
+      theme-type: light,
     ),
     typography: Roboto,
+    density: 0,
+  ));
+}
+
+.rose-red-theme {
+  @include mat.theme((
+    color: (
+      primary: mat.$rose-palette,
+      tertiary: mat.$red-palette,
+      theme-type: light,
+    ),
+    density: 0,
+  ));
+}
+
+.magenta-violet-theme {
+  @include mat.theme((
+    color: (
+      primary: mat.$magenta-palette,
+      tertiary: mat.$violet-palette,
+      theme-type: dark,
+    ),
+    density: 0,
+  ));
+}
+
+.cyan-orange-theme {
+  color-scheme: dark;
+  @include mat.theme((
+    color: (
+      primary: mat.$cyan-palette,
+      tertiary: mat.$violet-palette,
+      theme-type: dark,
+    ),
     density: 0,
   ));
 }
@@ -40,7 +74,6 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 :root {
   @include mat.toolbar-overrides((
@@ -48,6 +81,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     container-text-color: var(--mat-sys-on-primary-container),
   ));
   @include mat.icon-button-overrides((
-    icon-color: var(--mat-sys-on-primary-container)
+    icon-color: var(--mat-sys-on-primary-container),
+  ));
+  @include mat.checkbox-overrides((
+    //unselected-icon-color: var(--mat-sys-primary),
+    unselected-icon-color: var(--mat-sys-on-primary-container),
   ));
 }
