--- a/ToDo-App/src/app/task/task.html
+++ b/ToDo-App/src/app/task/task.html
@@ -4,6 +4,7 @@
     </mat-card-header>
     <mat-card-content>{{taskContent}}</mat-card-content>
     <mat-card-actions>
+        <button matIconButton (click)="edit()"><mat-icon>edit</mat-icon></button>
         <mat-checkbox [checked]="isActive" (change)="checkbox()"></mat-checkbox>
         <button matIconButton (click)="remove()"><mat-icon>close</mat-icon></button>
     </mat-card-actions>
